--- a/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
+++ b/layouts/partials/widgets/github.ravichandranvigneshwaran.project.html
@@ -29,6 +29,16 @@
     width: 100%;
     margin-bottom: 10px;
 }
+.card-body a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.card-body a:hover {
+    color: inherit; 
+    text-decoration:none; 
+    cursor:pointer;  
+}
 </style>
 
 <div class="container body-container" id="project-card-container" style="padding-top: 20px">
